safari extension, flex-wrap safari fix :postbox:

--- a/src/style.less
+++ b/src/style.less
@@ -24,7 +24,8 @@ h1,h2,h3,h4,h5{
 }
 header{
   width: 100%;
-  background: url("images/bg.jpg") center center no-repeat;
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url('images/bg.jpg');
+  background-position: center center;
   background-size: cover;
   padding: 100px;
 }
@@ -34,11 +35,12 @@ h1{
   background: url("images/addendum-logo.svg") top center no-repeat;
   background-size: 100%;
   display: block; 
-  width: 49%;
+  width: 450px;
   height: 150px;
 }
 h2{
-  font-size:  3em;
+  font-size:  3.5em;
+  letter-spacing: 2px;
   color: #fff;
   text-transform: uppercase;
   width: 80%;
@@ -46,12 +48,15 @@ h2{
 }
 h3{
   margin-top: 50px;
-  width: 80%;
+  width: 70%;
   a{
     color: @yellow;
     text-decoration: none;
     text-transform: uppercase;
     font-size:  2em;
+    &:hover{
+      text-decoration: underline;
+    }
   }
 }
 .container{
@@ -80,12 +85,27 @@ section{
     padding: 30px 0 0 0;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     > div{
-      padding: 10px;
-      flex: 1;
+      padding: 10px 20px;
     }
     img{
       height: 200px;
     }
   }
+}
+@media (max-width: 768px) {
+  header{
+    padding: 50px 70px;
+
+  }
+  h1{
+    width: 70%;
+    height: 100px;
+  }
+  h2{
+    font-size:  2.7em;
+    line-height:  1.2em;
+  }
+
 }
